# ih-fake-news-detector

./: .gitignore  GUIDELINES.md  README.md  main.ipynb  presentation.pptx  pyproject.toml  slides.pptx
data/processed/: testing_data_predicted.csv
data/raw/: testing_data.csv
