[project]
name = "ih-fake-news-detector"
version = "0.1.0"
description = "A simple NLP pipeline for detecting fake news headlines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contractions>=0.1.73",
    "fasttext>=0.9.3",
    "gensim>=4.4.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "xgboost>=3.2.0",
]
